# python-rustification-test

./: .gitignore  Cargo.toml  README.md  pure python profile.pstat  pyproject.toml  requirements.txt
docs/: measures.xlsx
rust_src/: lib.rs
src/: abstract_world.py  cell.py  field.py  game.py  main.py  world.py
