[package]
name = "live_game_optmizations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "rust_src/lib.rs"
name = "live_game"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
rand = "0.9.0-alpha.2"
